2006-11-10 [mones]	2.6.0cvs28

	* src/compose.c
	* src/compose.h
		added COMPOSE_CHECK_BEFORE_SEND hook

2006-11-10 [paul]	2.6.0cvs27

	* src/crash.c
		more renaming
		add libSM to get_compiled_in_features()
	* src/main.c
		more renaming

2006-11-10 [colin]	2.6.0cvs26

	* src/etpan/imap-thread.c
		Add a reference to libetpan's sasl engine
		so that sasl_done() doesn't get called by
		libetpan, and doesn't break openssl.
		Should fix bug 1053, 'SC fails to reestablish 
		a secure connection'
		Patch by Hoa

2006-11-10 [colin]	2.6.0cvs25

	* manual/addrbook.xml
	* manual/advanced.xml
	* manual/faq.xml
	* manual/intro.xml
		Some more renaming

2006-11-09 [colin]	2.6.0cvs24

	* src/plugins/bogofilter/bogofilter_gtk.c
		Add comment about annoyance

2006-11-09 [colin]	2.6.0cvs23

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter_gtk.c
		Prepare things needed to thread bogofilter
		filtering: separate bogo stuff and possible GUI
		stuff. 

2006-11-09 [colin]	2.6.0cvs22

	* src/account.c
	* src/compose.c
		Search for one of our accounts in Delivered-To
		(helps for auto-account selection when 
		 replying/forwarding)
	* src/folderview.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/plugins/trayicon/trayicon.c
		Allow opening a new mail with any account from
		the contextual menu

2006-11-09 [wwp]	2.6.0cvs21

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_compose_writing.c
		add a compose new message format (in prefs/compose/writing), it's a
		simple subject+body template to use when opening a new composition
		window. It's similar to the existent reply and forward formats.

		enhanced the template/format % symbols substitution mechanism to
		use current composition window information when % are used in
		the compose new message format or in templates applied to new
		messages (there were useless in that situations before). When
		applied to new messages, %d corresponds to the system time/date.
