@@ -2053,3 +2053,4 @@
 ( cvs diff -u -r 1.1.4.57 -r 1.1.4.58 src/etpan/imap-thread.c;  ) > 2.6.0cvs26.patchset
 ( cvs diff -u -r 1.23.2.18 -r 1.23.2.19 src/crash.c;  cvs diff -u -r 1.115.2.112 -r 1.115.2.113 src/main.c;  ) > 2.6.0cvs27.patchset
 ( cvs diff -u -r 1.382.2.326 -r 1.382.2.327 src/compose.c;  cvs diff -u -r 1.50.2.28 -r 1.50.2.29 src/compose.h;  ) > 2.6.0cvs28.patchset
+( cvs diff -u -r 1.274.2.155 -r 1.274.2.156 src/mainwindow.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/plugins/bogofilter/bogofilter.h;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/plugins/bogofilter/bogofilter_gtk.c;  ) > 2.6.0cvs29.patchset
