@@ -265,16 +265,17 @@ static gboolean gtk_message_callback(gpointer data)
 	return FALSE;
 }
 
-static void gtk_safe_message_callback(gchar *message, gint total, gint done)
+static void gtk_safe_message_callback(gchar *message, gint total, gint done, gboolean thread_safe)
 {
 	BogoCbData *cbdata = g_new0(BogoCbData, 1);
 	if (message)
 		cbdata->message = g_strdup(message);
 	cbdata->total = total;
 	cbdata->done = done;
-	/* looks like the various calls can come in unordered. 
-	 * annoying. */
-	g_timeout_add(0, gtk_message_callback, cbdata);
+	if (thread_safe)
+		g_timeout_add(0, gtk_message_callback, cbdata);
+	else
+		gtk_message_callback(cbdata);
 }
 
 static struct BogofilterPage bogofilter_page;
